# ChangeLog for app-editors/kile
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/kile/ChangeLog,v 1.29 2004/04/09 14:30:17 dholm Exp $

  09 Apr 2004; David Holm <dholm@gentoo.org> kile-1.6.2.ebuild:
  Added to ~ppc.

*kile-1.6.2 (08 Apr 2004)

  08 Apr 2004; Dominik Stadler <centic@gentoo.org> kile-1.6.2.ebuild:
  Bump to Version 1.6.2, fixes Bug 42016

  20 Mar 2004; Jason Wever <weeve@gentoo.org> kile-1.6.1.ebuild:
  Added ~sparc keyword.

  09 Feb 2004; Dylan Carlson <absinthe@gentoo.org> kile-1.6.1.ebuild:
  added amd64 keyword.

*kile-1.6.1 (09 Feb 2004)

  09 Feb 2004; Caleb Tennis <caleb@gentoo.org> kile-1.6.1.ebuild:
  New version

  29 Nov 2003; Caleb Tennis <caleb@gentoo.org> kile-1.5.2.ebuild, kile-1.6.ebuild:
  Mark x86 stable and remove older ebuild

  01 Nov 2003; Caleb Tennis <caleb@gentoo.org> kile-1.6_beta2.ebuild,
  kile-1.6_beta2.ebuild:
  Version bump to 1.6 final

  01 Nov 2003; Mamoru KOMACHI <usata@gentoo.org> kile-1.3.1.ebuild,
  kile-1.5.2.ebuild, kile-1.6_beta2.ebuild, metadata.xml:
  Changed app-text/tetex to virtual/tetex and added text-markup herd
  to metadata.xml.

*kile-1.6_beta2 (31 Oct 2003)

  31 Oct 2003; Caleb Tennis <caleb@gentoo.org> kile-1.6_beta1.ebuild,
  kile-1.6_beta2.ebuild:
  Version bump, remove 1.6_beta1

*kile-1.6_beta1 (23 Oct 2003)

  23 Oct 2003; Caleb Tennis <caleb@gentoo.org> kile-1.6_beta1.ebuild:
  New version

  03 Oct 2003; Caleb Tennis <caleb@gentoo.org> kile-1.5.2.ebuild, metadata.xml:
  Making x86 stable, add metadata

*kile-1.5.2 (22 Jul 2003)

  22 Jul 2003; Caleb Tennis <caleb@gentoo.org> kile-1.5.2.ebuild:
  New version

  16 Jun 2003; Caleb Tennis <caleb@gentoo.org> kile-1.5.ebuild:
  Moving to stable x86

*kile-1.5 (28 Apr 2003)

  28 Apr 2003: Caleb Tennis <caleb@gentoo.org> ChangeLog, kile-1.5.ebuild:
  created the new version 1.5, closing bug 20047.  According to the 