@@ -1,6 +1,8 @@
 MD5 45ec09e058d8c9a6db27188a6751f9ca kile-1.6.1.ebuild 513
+MD5 2431a36551890132e68165175cf157fd kile-1.6.3.ebuild 514
 MD5 c15bbc8fa652d9b3274357557dda5e92 kile-1.6.2.ebuild 596
 MD5 178b4159d28eb2ec3db47f7c770d78b4 ChangeLog 4678
 MD5 dff3d1b6fe3c83e5952738d79f768ddd metadata.xml 187
 MD5 a44db19c2b5dae21957397a8545c3338 files/digest-kile-1.6.1 63
 MD5 ba479e34d506c2ca90c4f967a0a785ba files/digest-kile-1.6.2 63
+MD5 b2d942b2f202ceac4b91da5338540b6f files/digest-kile-1.6.3 63
