@@ -1,0 +1,1 @@
+MD5 971f2de0b28a7748c7dd76986bceec82 kile-1.6.3.tar.gz 2208235
