@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/kile
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/kile/ChangeLog,v 1.29 2004/04/09 14:30:17 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/kile/ChangeLog,v 1.30 2004/05/15 17:17:01 caleb Exp $
+
+*kile-1.6.3 (15 May 2004)
+
+  15 May 2004; Caleb Tennis <caleb@gentoo.org> +kile-1.6.3.ebuild:
+  New version
 
   09 Apr 2004; David Holm <dholm@gentoo.org> kile-1.6.2.ebuild:
   Added to ~ppc.
